# employment-analysis

./: .dockerignore  .env  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci-container.yml.text
data/: data.csv  meta.csv  structure.csv
docker/postgres/: init-database.sh
docker/prometheus/: prometheus.yml
docker/sql/: init.sql
docker/superset/: Dockerfile
schema/: dg.drawio
scripts/: check.py  etl.py
